[package]
name = "peer-to-peer-handshake"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.31.0", features = ["std", "rand"] }
rand = { version = "0.6", features = ["std"] }
trust-dns-resolver = "0.20.0"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
itertools = "0.12.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
test-case = "3.3.1"
